sorted/tests/09-underscore.stderr
error: wildcards must be placed last
  --> tests/09-underscore.rs:25:13
   |
25 |             _ => "elsewhere",
   |             ^
